remove the form updates the design name nad more

--- a/contact.html
+++ b/contact.html
@@ -43,11 +43,11 @@
                             <a class="nav-link active" href="contact.html">Contact</a>
                         </li>
                     </ul>
-                    <form action="#error" method="GET" class="d-flex search-header">
+                    <!-- <form action="#error" method="GET" class="d-flex search-header">
                         <input class="form-control" type="search" placeholder="Enter Keyword..." aria-label="Search"
                             required>
                         <button class="btn btn-style" type="submit"><i class="fas fa-search"></i></button>
-                    </form>
+                    </form> -->
                 </div>
                 <!-- toggle switch for light and dark theme -->
                 <div class="cont-ser-position">
@@ -185,9 +185,11 @@
                     </div>
                 </div>
                 <!-- copyright -->
-                <p class="copy-footer-29 text-center pt-lg-2 mt-5 pb-2">© 2024 Dentition. All rights reserved. Design by
-                    <a href="https://w3layouts.com/" target="_blank">
-                        W3Layouts</a></p>
+                <p class="copy-footer-29 text-center pt-lg-2 mt-5 pb-2">© 2024 Dentition. All rights reserved. Design by "RiMViT"
+
+                    <!-- <a href="https://w3layouts.com/" target="_blank">
+                        Flossophers</a> -->
+                    </p>
                 <!-- //copyright -->
             </div>
         </div>
