dental oasis and dentition

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="index.html">
-                    <i class="fas fa-tooth"></i>Dentition
+                    <i class="fas fa-tooth"></i>DENTAL OASIS
                 </a>
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
@@ -397,7 +397,7 @@
                 <div class="row footer-top-29">
                     <div class="col-md-5 footer-list-29 pe-xl-5">
                         <h6 class="footer-title-29">Contact Info </h6>
-                        <p class="mb-2 pe-xl-5">Address : Dentition, 5th Avenue, #06 lane street, Bhopal, 462002, India..
+                        <p class="mb-2 pe-xl-5">Address : DENTAL OASIS, 5th Avenue, #06 lane street, Bhopal, 462002, India..
                         </p>
                         <p class="mb-2">Phone Number : <a href="tel:+1(21) 234 4567">+91 7746943200</a></p>
                         <p class="mb-2">Email : <a href="mailto:info@example.com">mohitsahu5649oolu@gmail.com.com</a></p>
@@ -431,7 +431,7 @@
                     </div>
                 </div>
                 <!-- copyright -->
-                <p class="copy-footer-29 text-center pt-lg-2 mt-5 pb-2">© 2024 Dentition. All rights reserved by Mohit. Developed for FRT project
+                <p class="copy-footer-29 text-center pt-lg-2 mt-5 pb-2">© 2024 DENTAL OASIS . All rights reserved by Dentition. Developed for FRT project
                     <a>
                      </a></p>
                 <!-- //copyright -->
