--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="index.html">
-                    <i class="fas fa-tooth"></i>Dentition
+                    <i class="fas fa-tooth"></i>DENTAL OASIS
                 </a>
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
@@ -185,7 +185,7 @@
                     </div>
                 </div>
                 <!-- copyright -->
-                <p class="copy-footer-29 text-center pt-lg-2 mt-5 pb-2">© 2024 Dentition. All rights reserved. Design by "RiMViT"
+                <p class="copy-footer-29 text-center pt-lg-2 mt-5 pb-2">© 2024 DENTAL OASIS. All rights reserved by Dentition . Design by "RiMViT"
 
                     <!-- <a href="https://w3layouts.com/" target="_blank">
                         Flossophers</a> -->
