--- a/services.html
+++ b/services.html
@@ -20,7 +20,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="index.html">
-                    <i class="fas fa-tooth"></i>Dentition
+                    <i class="fas fa-tooth"></i>DENTAL OASIS 
                 </a>
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
@@ -337,7 +337,7 @@
                     </div>
                 </div>
                 <!-- copyright -->
-                <p class="copy-footer-29 text-center pt-lg-2 mt-5 pb-2">© 2024 Dentition. All rights reserved by Mohit. Developed for FRT project
+                <p class="copy-footer-29 text-center pt-lg-2 mt-5 pb-2">© 2024 DENTAL OASIS. All rights reserved by Dentition. Developed for FRT project
                     <a></a></p>
                 <!-- //copyright -->
             </div>
