--- a/healthbot.html
+++ b/healthbot.html
@@ -1,1 +1,1 @@
-<iframe src='https://bot-api-centralindia.healthbot.microsoft.com/api/tenants/new1-zgssfx7/<action>'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+<iframe src='https://centralindia.healthbot.microsoft.com/account/new1-zgssfx7'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
